Update stencil router and stencil core

--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {
-    "@stencil/core": "~0.16.2",
-    "@stencil/router": "~0.3.1",
+    "@stencil/core": "^0.18.1",
     "moment": "^2.24.0"
   },
   "license": "MIT",
   "devDependencies": {
-    "@stencil/sass": "^0.1.1"
+    "@stencil/router": "^0.3.3",
+    "@stencil/sass": "^0.1.1",
+    "workbox-build": "3.4.1"
   }
 }
